<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_activity_title">About</string>
    <string name="about_app_license">Source code available on &lt;a href=\"https://gerrit.wikimedia.org/r/#/admin/projects/apps/android/wikipedia\">Gerrit&lt;/a> and &lt;a href=\"https://github.com/wikimedia/apps-android-wikipedia\">GitHub&lt;/a> under the &lt;a href=\"https://phabricator.wikimedia.org/diffusion/APAW/browse/master/COPYING?view=raw\">Apache 2.0 License&lt;/a>. Unless otherwise specified, content is available under a &lt;a href=\"https://en.wikipedia.org/wiki/Wikipedia:Text_of_Creative_Commons_Attribution-ShareAlike_3.0_Unported_License\">Creative Commons Attribution-ShareAlike License&lt;/a>.</string>
    <string name="about_app_license_heading">License</string>
    <string name="about_article_section">About this article</string>
    <string name="about_contributors_heading">Contributors</string>
    <string name="about_description">About the Wikipedia app</string>
    <string name="about_libraries_heading">Libraries used</string>
    <string name="about_translators_heading">Translators</string>
    <string name="about_translators_translatewiki">This app was translated by the volunteer translators at &lt;a href=\"https://translatewiki.net\">translatewiki.net&lt;/a>.</string>
    <string name="about_wikipedia_url">https://en.m.wikipedia.org/wiki/Wikipedia:About</string>
    <string name="about_wmf">A product of the &lt;a href=\"https://wikimediafoundation.org/\">Wikimedia Foundation&lt;/a></string>
    <string name="abusefilter_text_disallow">An automated filter has identified this edit as potentially unconstructive, or potential vandalism.&lt;br />&lt;br />Wikipedia is an encyclopedia and only neutral, notable content belongs here.</string>
    <string name="abusefilter_text_warn">An automated filter has identified this edit as potentially unconstructive. It may contain one or more of the following:&lt;br />&lt;br />· Typing in all caps&lt;br />· Blanking articles or spamming&lt;br />· Irrelevant external links or images&lt;br />· Repeating characters</string>
    <string name="abusefilter_title_disallow">You cannot publish this edit. Please go back and change it.</string>
    <string name="abusefilter_title_warn">This may be an unconstructive edit. Are you sure you want to publish it?</string>
    <string name="account_creation_password_hint">Password</string>
    <string name="account_editing_blocked_dialog_cancel_button_text">Cancel</string>
    <string name="account_editing_blocked_dialog_ok_button_text">OK</string>
    <string name="account_name">@string/wikimedia</string>
    <string name="account_type">org.wikimedia</string>
    <string name="add_square_brackets_to_string">[%s]</string>
    <string name="add_translation">Add %s translation</string>
    <string name="add_wikipedia_languages_text">Add Wikipedia languages</string>
    <string name="address_copied">Address copied to clipboard.</string>
    <string name="all_tab_items_closed">All tabs closed.</string>
    <string name="alpha_update_notification_text">Tap to download</string>
    <string name="alpha_update_notification_title">New alpha update available</string>
    <string name="android_app_edit_help_url">https://m.mediawiki.org/wiki/Wikimedia_Apps/Suggested_edits</string>
    <string name="android_app_faq_url">https://www.mediawiki.org/wiki/Wikimedia_Apps/Android_FAQ</string>
    <string name="android_app_request_an_account_url">https://en.wikipedia.org/wiki/Wikipedia:Request_an_account</string>
    <string name="app_name">@string/app_name_prod</string>
    <string name="app_name_alpha">Wikipedia Alpha</string>
    <string name="app_name_beta">Wikipedia Beta</string>
    <string name="app_name_prod">Wikipedia</string>
    <string name="app_settings">App settings</string>
    <string name="app_shortcuts_continue_reading">Continue reading</string>
    <string name="app_shortcuts_random">Random</string>
    <string name="app_shortcuts_search">Search</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="article_header_edit_description">Edit title description</string>
    <string name="article_header_edit_hint">Edit…</string>
    <string name="article_header_edit_lead_section">Edit introduction</string>
    <string name="article_load_error_retry">Retry</string>
    <string name="article_menu_bar_bookmark">Add this article to a reading list</string>
    <string name="article_menu_bar_share">Share the article link</string>
    <string name="back_to_top">Back to top</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="button_add_to_reading_list">Add to reading list</string>
    <string name="button_clear_all_recent_searches">Clear recent searches</string>
    <string name="button_close_tab">Close tab</string>
    <string name="button_continue_to_article">Read article</string>
    <string name="button_continue_to_disambiguation">View similar pages</string>
    <string name="button_get_directions">Get directions</string>
    <string name="cancel">Cancel</string>
    <string name="captcha_image">Captcha image</string>
    <string name="card_offline_error_retry">Retry</string>
    <string name="create_account_button">Create account</string>
    <string name="create_account_email_hint">Email (Optional)</string>
    <string name="create_account_next">Next</string>
    <string name="create_account_password_repeat_hint">Repeat password</string>
    <string name="create_account_username_hint">Username</string>
    <string name="description_edit_tutorial_promise">By starting, I promise not to misuse this feature.</string>
    <string name="edit_section_captcha_hint">Repeat words from above</string>
    <string name="edit_section_captcha_message">To help protect against automated spam, please enter the words that appear below</string>
    <string name="edit_section_captcha_reload">Tap CAPTCHA to reload</string>
    <string name="edit_section_captcha_request_an_account_message">"Can't see the image? &lt;a href=\"https://en.wikipedia.org/wiki/Wikipedia:Request_an_account\">Request an account&lt;/a>"</string>
    <string name="email_recommendation_message">Recommended since email is needed for account recovery.</string>
    <string name="feed">Explore</string>
    <string name="login_2fa_hint">Two-Factor Authentication Code</string>
    <string name="login_dont_have_account">"Don't have an account?"</string>
    <string name="login_forgot_password">Forgot your password?</string>
    <string name="login_join_wikipedia">Join Wikipedia</string>
    <string name="login_password_hint">Password</string>
    <string name="login_username_hint">Username</string>
    <string name="menu_login">Log in</string>
    <string name="menu_page_find_in_page">Find in page</string>
    <string name="menu_page_font_and_theme">Font and theme</string>
    <string name="menu_page_other_languages">Change language</string>
    <string name="menu_show_toc">Table of Contents</string>
    <string name="nav_item_forward">Forward</string>
    <string name="nav_item_history">History</string>
    <string name="nav_item_nearby">Nearby</string>
    <string name="nav_item_reading_lists">My lists</string>
    <string name="preference_category_notification_types">In-app notification types</string>
    <string name="preference_key_notification_milestone_enable">enableMilestoneNotification</string>
    <string name="preference_key_notification_poll_enable">enableNotificationPolling</string>
    <string name="preference_key_notification_revert_enable">enableRevertNotification</string>
    <string name="preference_key_notification_thanks_enable">enableThanksNotification</string>
    <string name="preference_key_notification_welcome_enable">enableWelcomeNotification</string>
    <string name="preference_summary_notification_milestone">Certain edit counts are reached</string>
    <string name="preference_summary_notification_poll">Allow the app to use data to check for new notifications in the background.</string>
    <string name="preference_summary_notification_revert">One of your contributions was reverted</string>
    <string name="preference_summary_notification_thanks">Someone thanks you for an edit</string>
    <string name="preference_summary_notification_welcome">An account is created</string>
    <string name="preference_title_notification_milestone">Milestone</string>
    <string name="preference_title_notification_poll">Poll notifications</string>
    <string name="preference_title_notification_revert">Revert</string>
    <string name="preference_title_notification_thanks">Thanks</string>
    <string name="preference_title_notification_welcome">Welcome</string>
    <string name="privacy_policy_description">Privacy policy</string>
    <string name="suggested_edits_tasks_activity_title">Suggested edits</string>
    <string name="suggested_edits_tasks_onboarding_get_started">Get started</string>
    <string name="suggested_edits_tutorial_message">Welcome to the new home for quick editing in the Wikipedia app. Your contributions are much appreciated. Happy editing!</string>
</resources>