<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <org.wikipedia.settings.SwitchPreferenceMultiLine android:title="@string/preference_title_notification_poll" android:key="@string/preference_key_notification_poll_enable" android:summary="@string/preference_summary_notification_poll" android:defaultValue="false" />
    <PreferenceCategory android:title="@string/preference_category_notification_types">
        <org.wikipedia.settings.SwitchPreferenceMultiLine android:title="@string/preference_title_notification_welcome" android:key="@string/preference_key_notification_welcome_enable" android:summary="@string/preference_summary_notification_welcome" android:defaultValue="true" />
        <org.wikipedia.settings.SwitchPreferenceMultiLine android:title="@string/preference_title_notification_milestone" android:key="@string/preference_key_notification_milestone_enable" android:summary="@string/preference_summary_notification_milestone" android:defaultValue="true" />
        <org.wikipedia.settings.SwitchPreferenceMultiLine android:title="@string/preference_title_notification_thanks" android:key="@string/preference_key_notification_thanks_enable" android:summary="@string/preference_summary_notification_thanks" android:defaultValue="true" />
        <org.wikipedia.settings.SwitchPreferenceMultiLine android:title="@string/preference_title_notification_revert" android:key="@string/preference_key_notification_revert_enable" android:summary="@string/preference_summary_notification_revert" android:defaultValue="true" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>