<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatImageView android:id="@id/article_menu_bookmark" android:tag="0" android:contentDescription="@string/article_menu_bar_bookmark" app:layout_constraintStart_toStartOf="parent" app:srcCompat="@drawable/ic_bookmark_border_white_24dp" style="@style/PageActionTabLayoutButtonStyle" />
    <androidx.appcompat.widget.AppCompatImageView android:id="@id/article_menu_share" android:tag="1" android:contentDescription="@string/article_menu_bar_share" app:layout_constraintStart_toEndOf="@id/article_menu_bookmark" app:srcCompat="@drawable/ic_share_white_24dp" style="@style/PageActionTabLayoutButtonStyle" />
    <androidx.appcompat.widget.AppCompatImageView android:id="@id/article_menu_change_language" android:tag="2" android:contentDescription="@string/menu_page_other_languages" app:layout_constraintStart_toEndOf="@id/article_menu_share" app:srcCompat="@drawable/ic_translate_white_24dp" style="@style/PageActionTabLayoutButtonStyle" />
    <androidx.appcompat.widget.AppCompatImageView android:id="@id/article_menu_find_in_page" android:tag="3" android:contentDescription="@string/menu_page_find_in_page" app:layout_constraintStart_toEndOf="@id/article_menu_change_language" app:srcCompat="@drawable/ic_find_in_page" style="@style/PageActionTabLayoutButtonStyle" />
    <androidx.appcompat.widget.AppCompatImageView android:id="@id/article_menu_font_and_theme" android:tag="4" android:contentDescription="@string/menu_page_font_and_theme" app:layout_constraintStart_toEndOf="@id/article_menu_find_in_page" app:srcCompat="@drawable/ic_format_size_white_24dp" style="@style/PageActionTabLayoutButtonStyle" />
    <androidx.appcompat.widget.AppCompatImageView android:id="@id/article_menu_show_toc" android:tag="5" android:contentDescription="@string/menu_show_toc" app:layout_constraintEnd_toEndOf="parent" app:srcCompat="@drawable/ic_list_white_24dp" style="@style/PageActionTabLayoutButtonStyle" />
</merge>