<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@id/edit_onboarding_view" android:background="?main_toolbar_color" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <org.wikipedia.onboarding.OnboardingPageView android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent" app:centeredImage="@drawable/ic_editor_onboarding" app:imageSize="207.0dip" app:primaryText="@string/suggested_edits_tasks_activity_title" app:secondaryText="@string/suggested_edits_tutorial_message" app:tertiaryText="@string/description_edit_tutorial_promise" />
    <View android:layout_gravity="bottom" android:background="?chart_shade5" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_marginBottom="48.0dip" />
    <TextView android:textColor="?colorAccent" android:layout_gravity="end|bottom|center" android:id="@id/getStartedButton" android:layout_width="wrap_content" android:layout_height="48.0dip" android:text="@string/suggested_edits_tasks_onboarding_get_started" style="@style/TransparentButton" />
</FrameLayout>