<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/captcha_container" android:background="?paper_color" android:padding="16.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textColor="?primary_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="0.0dip" android:text="@string/edit_section_captcha_message" style="@style/MaterialMediumSecondaryCaption" />
    <TextView android:textColor="?primary_text_color" android:id="@id/request_account_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="16.0dip" android:text="@string/edit_section_captcha_request_an_account_message" style="@style/MaterialListSubtitle" />
    <FrameLayout android:paddingTop="16.0dip" android:paddingBottom="16.0dip" android:layout_width="240.0dip" android:layout_height="wrap_content">
        <com.facebook.drawee.view.SimpleDraweeView android:layout_gravity="center_horizontal" android:id="@id/captcha_image" android:background="@null" android:layout_width="fill_parent" android:layout_height="80.0dip" android:contentDescription="@string/captcha_image" app:actualImageScaleType="fitCenter" style="@style/SimpleDraweeViewPlaceholder" />
        <ProgressBar android:layout_gravity="center_horizontal" android:id="@id/captcha_image_progress" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:indeterminate="true" style="?android:progressBarStyleHorizontal" />
    </FrameLayout>
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:text="@string/edit_section_captcha_reload" android:textAlignment="center" style="?android:textAppearanceSmall" />
    <com.google.android.material.textfield.TextInputLayout android:id="@id/captcha_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginBottom="8.0dip" android:hint="@string/edit_section_captcha_hint">
        <org.wikipedia.views.PlainPasteEditText android:layout_gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLines="1" android:inputType="textVisiblePassword|textNoSuggestions" android:imeOptions="actionDone|flagNoExtractUi" style="?android:textAppearanceMedium" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView android:enabled="false" android:id="@id/captcha_submit_button" android:visibility="gone" android:layout_width="fill_parent" android:text="@string/create_account_button" android:layout_marginStart="0.0dip" android:layout_marginEnd="0.0dip" style="@style/App.Button.Blue" />
</LinearLayout>