<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:id="@id/page_action_overflow_card_container" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="-2.0dip" android:layout_marginEnd="2.0dip" app:cardUseCompatPadding="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:background="?material_theme_border_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:divider="?list_separator_drawable" android:minWidth="160.0dip" android:showDividers="middle">
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="?paper_color" android:paddingTop="13.0dip" android:paddingBottom="13.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="0.0dip" style="@style/OverflowMenuItem">
            <androidx.appcompat.widget.AppCompatImageView android:id="@id/page_action_overflow_forward" android:background="?selectableItemBackgroundBorderless" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/nav_item_forward" android:paddingStart="12.0dip" android:paddingEnd="12.0dip" app:srcCompat="@drawable/ic_arrow_forward_black_24dp" app:tint="?page_toolbar_icon_color" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:background="?paper_color" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:id="@id/page_action_overflow_feed" android:text="@string/feed" style="@style/OverflowMenuItem" />
            <TextView android:id="@id/page_action_overflow_reading_lists" android:text="@string/nav_item_reading_lists" style="@style/OverflowMenuItem" />
            <TextView android:id="@id/page_action_overflow_history" android:text="@string/nav_item_history" style="@style/OverflowMenuItem" />
            <TextView android:id="@id/page_action_overflow_nearby" android:text="@string/nav_item_nearby" style="@style/OverflowMenuItem" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>